chapel-lang.org/docs/2.10/_sources/modules/packages/AllLocalesBarriers.rst.txt
.. default-domain:: chpl

.. module:: AllLocalesBarriers
   :synopsis: Support for a scalable global barrier between all locales.

AllLocalesBarriers
==================
**Usage**

.. code-block:: chapel

   use AllLocalesBarriers;


or

.. code-block:: chapel

   import AllLocalesBarriers;


Support for a scalable global barrier between all locales.

This module provides a single global barrier named :var:`allLocalesBarrier` that
can be used as a barrier between all locales, optionally with multiple tasks
per locale.

The :var:`allLocalesBarrier` barrier only supports the
:proc:`~Collectives.barrier.barrier()` and
:proc:`~Collectives.barrier.reset()` methods of the
:attr:`~Collectives.barrier` interface. By default it can be
used as a barrier between 1 task on each locale. The
:proc:`~Collectives.barrier.reset()` method can be used to change how
many tasks per locale will participate in each barrier.

Use of this barrier is similar to ``shmem_barrier_all()`` or
``MPI_Barrier(MPI_COMM_WORLD)``, except that it's possible for multiple
tasks on the same locale to barrier. In the following examples all tasks
will print "Before barrier" before any print "After barrier"

.. literalinclude:: ../../../../test/library/packages/AllLocalesBarriers/doc-examples/AllLocalesBarriersExamples.chpl
   :language: chapel
   :start-after: START_EXAMPLE
   :end-before: STOP_EXAMPLE

The implementation is dependent on the communication layer and the
underlying hardware, but typically some sort of tree or dissemination based
barrier that's optimized for the network will be used.

.. data:: const allLocalesBarrier: AllLocalesBarrier = new AllLocalesBarrier()

